[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerbix-sdk"
version = "0.4.0"
description = "CerbiX SDK — AI agent identity & access control in three lines of code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CerbiX", email = "team@cerbix.ai" },
]
keywords = ["ai", "agents", "security", "identity", "access-control", "mcp", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
all = ["langchain-core>=0.1.0"]

[project.urls]
Homepage = "https://cerbix-ai.web.app"
Repository = "https://github.com/cerbixai/sdk-python"
Documentation = "https://github.com/cerbixai/docs"
Issues = "https://github.com/cerbixai/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["cerbix_sdk"]
